@@ -13796,3 +13796,77 @@ part
       ;
 
   ;
+
+#------------------------------------------------------------
+# ATxmega256A3
+#------------------------------------------------------------
+
+part
+    id               = "x256a3";
+    desc             = "ATXMEGA256A3";
+    signature        = 0x1E 0x98 0x42;
+    has_jtag         = yes;
+    has_pdi          = yes;
+    nvm_base         = 0x01C0;
+
+    memory "eeprom"
+        page_size       = 32;
+        size            = 4096;
+      ;
+
+    memory "flash"
+        size            = 0x40000;
+        page_size       = 512;
+      ;
+
+    memory "boot"
+        size            = 0x2000;
+        page_size       = 512;
+      ;
+
+# signature is actually in IO address space
+    memory "signature"
+        size            = 3;
+        offset          = 0x90;
+      ;
+
+    memory "fuse0"
+        size            = 1;
+        offset          = 0x20;
+      ;
+
+    memory "fuse1"
+        size            = 1;
+        offset          = 0x21;
+      ;
+
+    memory "fuse2"
+        size            = 1;
+        offset          = 0x22;
+      ;
+
+    memory "fuse4"
+        size            = 1;
+        offset          = 0x24;
+      ;
+
+    memory "fuse5"
+        size            = 1;
+        offset          = 0x25;
+      ;
+
+    memory "lockbits"
+        size            = 1;
+        offset          = 0x27;
+      ;
+
+    memory "calibration"
+        size            = 512;
+      ;
+
+    memory "usersig"
+        size            = 512;
+        offset          = 0x200;
+      ;
+
+  ;
